samples/_failures_safe/1761091910_7a8ced_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58dd3289.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_58dd3289.c:133:9: error: expected expression at end of input
  133 |         if (
      |         ^~
./samples/SAFE/__tmp_58dd3289.c:133:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58dd3289.c:133:9: error: expected declaration or statement at end of input
